crates/mun_compiler/src/snapshots/mun_compiler__diagnostics__tests__expected_function_error.snap
---
source: crates/mun_compiler/src/diagnostics.rs
expression: "compilation_errors(\"\\n\\nfn main() {\\nlet a = Foo();\\n\\nlet b = Bar();\\n}\")"
---
error: cannot find value `Foo` in this scope
 --> main.mun:4:8
  |
4 | let a = Foo();
  |         ^^^ not found in this scope
  |
error: expected function type
 --> main.mun:4:8
  |
4 | let a = Foo();
  |         ^^^ expected function, found `{unknown}`
  |
error: cannot find value `Bar` in this scope
 --> main.mun:6:8
  |
6 | let b = Bar();
  |         ^^^ not found in this scope
  |
error: expected function type
 --> main.mun:6:8
  |
6 | let b = Bar();
  |         ^^^ expected function, found `{unknown}`
  |

